# CoLM202X

./: .gitignore  build.sh  run.sh
cmake/: CMakeLists.txt
include/: Makeoptions.gnu  define.h
main/HYDRO/: MOD_Hydro_VIC_Variables.F90
mkinidata/: CMakeLists.txt
mksrfdata/: CMakeLists.txt
mod_soil/: CMakeLists.txt  MOD_SoilSnowHydrology.F90  NOTE.md  groundwater.F90  run.sh
share/: CMakeLists.txt
